# ats

./: .gitignore  README.md  ax_prompt_api_guide.md  ax_prompt_app.py  package-lock.json  package.json  test_plan.md
agent_qa_dev/backoffice/backend/: .env.example  README.md  backoffice.db  backoffice_test.db  pyproject.toml  requirements-test.txt
agent_qa_dev/backoffice/backend/app/: __init__.py  main.py
agent_qa_dev/backoffice/backend/app/adapters/: agent_client_adapter.py  openai_judge_adapter.py  prompt_api_adapter.py  prompt_api_client.py
agent_qa_dev/backoffice/backend/app/core/: db.py  (+2 more)
agent_qa_dev/backoffice/backend/scripts/: remove_validation_run_mode_column.py  reset_db.py  run_tests_offline.sh
agent_qa_dev/backoffice/backend/tests/: conftest.py  test_acceptance_generic_prompt.py  test_auth_api.py  test_db_path_resolution.py  test_environment_mapping.py  test_generic_direct_query.py  test_generic_evaluate_job.py  test_generic_execute_job.py  test_generic_rows_endpoint.py  test_generic_run_repo.py  test_generic_runs_create.py  test_generic_template.py  test_health.py  test_parity_adapters.py  test_prompts_api.py  test_run_compare.py  test_utils_and_export.py  test_validation_agents_api.py  test_validation_dashboard.py  test_validation_eval_prompt_api.py  test_validation_evaluate_job_llm_only.py  test_validation_execute_job.py  test_validation_groups_api.py  test_validation_queries_api.py  test_validation_run_activity_api.py  test_validation_runs_api.py  test_validation_score_snapshot.py  test_validation_settings_api.py  test_validation_test_sets_api.py
(+413 files in other folders)
